--- a/ceit419/final/styles/nav.css
+++ b/ceit419/final/styles/nav.css
@@ -16,17 +16,18 @@ nav ul {
     justify-content: flex-start;
     gap: 2rem;
     padding: 0 1rem;
+    margin: 8px;
 }
 
 nav ul a {
     font-size: 1rem;
 }
 
-.navLinks a:hover{
+.navLinks li a:hover{
     color: var(--main-green);
     border-bottom: 2px solid var(--main-green);
     transition: ease-in-out 0.25s;
-    font-size: 1.1rem;
+
 }
 
 .contactLink a{
