--- a/ceit419/final/styles/projects.css
+++ b/ceit419/final/styles/projects.css
@@ -33,7 +33,7 @@
     align-items: center;
 }
 
-.projectInfo h3 {
+.projectInfo > h3 {
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--main-green);
@@ -65,6 +65,10 @@
     cursor: pointer;
 }
 
+.projectInfo span a:visited img {
+    color: var(--main-light);
+}
+
 @media screen and (max-width: 900px) {
     .projectInfo h3 {
         font-size: 1.3rem;
@@ -79,6 +83,10 @@
         width: 14px;
         height: 14px;
     }
+}
+
+.projectsContainer span {
+    color: var(--main-green)
 }
 
 @media screen and (max-width: 700px) {
